# xiaoyao-memory-system

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  FINAL-REPORT.md  LICENSE  PRODUCTION-USAGE-GUIDE.md  README.md  automation_system.py  complete_system_v7.py  proactive_evolution_system.py  production_memory_system.py  pyproject.toml  pytest.ini  record_knowledge_distillation.py  record_mempalace.py  record_today_learnings.py  record_vcp_learning.py  requirements.txt  setup.py  workflow_integration.py
data/: feedback_report.md
docs/: API.md  APPLICATION-GUIDE.md  ARCHITECTURE.md  FINAL-SUMMARY-REPORT.md  PHASE1-COMPLETE-REPORT.md  PHASE2-COMPLETE-REPORT.md  PHASE3-COMPLETE-REPORT.md  PHASE4-COMPLETE-REPORT.md  PHASE5-COMPLETE-REPORT.md  SUPER-MEMORY-SYSTEM-DESIGN.md  TROUBLESHOOTING.md  USAGE.md
src/: __init__.py  auto_graph_updater.py  configuration_layer.py  consciousness.py  dream_processor.py  evolution_system.py  feedback_collector.py  graphify_query_layer.py  llm_entity_extractor.py  long_term_memory_layer.py  long_term_memory_layer_v2.py  memory_types.py  meta_memory_layer.py  parameter_tuner.py  performance_profiler.py  short_term_memory_layer.py  super_memory_system.py  super_memory_system_v2.py  super_memory_system_v3.py  super_memory_system_v4.py  super_memory_system_v5.py  super_memory_system_v6.py  super_memory_system_v7.py  super_memory_system_v8.py  super_memory_system_v9.py  super_memory_system_v9_phase2.py  super_memory_system_v9_phase3.py  super_memory_system_v9_phase4.py  super_memory_system_v9_phase5.py  system_health_monitor.py  vcp_components.py  vector_store.py  working_memory_layer.py  xiaoyao_memory_system.py
(+33 files in other folders)
